Fix: fixed z-index

--- a/frontend/src/components/messageModal/MessageModal.css
+++ b/frontend/src/components/messageModal/MessageModal.css
@@ -2,6 +2,7 @@
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
     inset: 0;
+    z-index: 2;
     /* width: 100vw; */
     height: 100vh;
     display: flex;
