--- a/frontend/src/components/modelComponent/Model.css
+++ b/frontend/src/components/modelComponent/Model.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     font-family: 'DM Sans', 'sans serif';
+    z-index: 2;
 }
 
 .Model>h3,
