--- a/frontend/src/components/specialNavbar/SpecialNavbar.css
+++ b/frontend/src/components/specialNavbar/SpecialNavbar.css
@@ -6,6 +6,7 @@
     gap: 1rem;
     position: sticky;
     top: 1rem;
+    z-index: 2;
 }
 
 @media screen and (max-width:620px) {
